# Emergence

./: .gitignore  .gitmodules  CMakeLists.txt  Emergence.pri  Emergence.pro  PixelGates.pro  README.md  TODO  application.qrc  exportimagedialog.ui  lol.emrg  lol.gate  mainwindow.h  mainwindow.ui  mandelbrot.emrg  sun.emrg
demo/: lol.e  mandelbrot.e  uk.e
forms/: exportimagedialog.ui  functionmanager.ui  mainwindow.ui
headers/: ExportImageDialog.h  Function.h  FunctionManager.h  FunctionWorkspace.h  NodeBox.h  Workspace.h  commands.h  data_t.h  mainwindow.h  signalManager.h
headers/nodes/: BitmapNode.h  ColorNode.h  CompNode.h  ComplexNode.h  ConstNode.h  FunctionNode.h  LogicNode.h  MathNode.h  Node.h  PixelNode.h
include/: BitmapGate.h  CompGate.h  ConstGate.h  ExportImageDialog.h  Gate.h  IfGate.h  LogicGate.h  MathGate.h  NodeBox.h  PaletteGate.h  PixelGate.h  RenderArea.h  RenderGate.h  Socket.h  Workspace.h  commands.h  data_t.h  mainwindow.h  signalManager.h
include/gates/: BitmapGate.h  ColorGate.h  ConstGate.h  Gate.h  IfGate.h  LogicGate.h  MathGate.h  PaletteGate.h  PixelGate.h  RenderGate.h
include/nodes/: BitmapNode.h  ColorNode.h  CompNode.h  ComplexNode.h  ConstNode.h  IfNode.h  LogicNode.h  MathNode.h  Node.h  PaletteNode.h  PixelNode.h  RenderNode.h
lib/: CompGate.h  ConstGate.h  FuncGate.h  Gate.h  IfGate.h  LogicGate.h  MathGate.h  Palette.h  PaletteGate.h  PixelGate.h  RenderArea.h  RenderGate.h  Socket.h  Workspace.h  data_t.h  socket.h.autosave
plugins/: CMakeLists.txt  plugins.pro
plugins/color/: CMakeLists.txt  ColorNode.cpp  ColorNode.h  ColorPlugin.cpp  ColorPlugin.h  color.qrc  fromToStream.cpp
plugins/compare/: CMakeLists.txt  CompNode.cpp  CompNode.h  ComparePlugin.cpp  ComparePlugin.h  comp.qrc
plugins/condition/: CMakeLists.txt  ConditionPlugin.cpp  ConditionPlugin.h  IfNode.cpp  IfNode.h  cond.qrc
plugins/functions/: CMakeLists.txt  Function.cpp  Function.h  FunctionManager.cpp  FunctionManager.h  FunctionNode.cpp  FunctionNode.h  FunctionPlugin.cpp  FunctionPlugin.h  fromToStream.cpp  func.qrc  functionmanager.ui
plugins/image/: BitmapNode.cpp  BitmapNode.h  CMakeLists.txt  ImagePlugin.cpp  ImagePlugin.h  fromToStream.cpp
plugins/io/: CMakeLists.txt  ExportImageDialog.cpp  ExportImageDialog.h  InputNode.cpp  InputNode.h  IoPlugin.cpp  IoPlugin.h  OutputNode.cpp  OutputNode.h  RenderNode.cpp  RenderNode.h  io.qrc
plugins/logic/: CMakeLists.txt  LogicNode.cpp  LogicNode.h  LogicPlugin.cpp  LogicPlugin.h  logic.pro  logic.qrc
plugins/lut/: CMakeLists.txt  Gradient.cpp  Gradient.h  LUTNode.cpp  LUTNode.h  LUTPlugin.cpp  LUTPlugin.h  Palette.cpp  Palette.h  PaletteNode.cpp  PaletteNode.h  fromToStream.cpp
plugins/lut/dialog/: lut_dialog.cpp  lut_dialog.h
plugins/math/: CMakeLists.txt  ComplexNode.cpp  ComplexNode.h  MathNode.cpp  MathNode.h  MathPlugin.cpp  MathPlugin.h  RealNode.cpp  RealNode.h  fromToStream.cpp  math.qrc
src/: CMakeLists.txt  EmergenceInterface.h  ExportImageDialog.cpp  Function.cpp  FunctionManager.cpp  FunctionWorkspace.cpp  Node.cpp  Node.h  NodeBox.cpp  NodeBox.h  NodeInterface.h  Palette.cpp  PluginManager.cpp  PluginManager.h  RenderArea.cpp  Socket.cpp  Workspace.cpp  Workspace.h  commands.cpp  data_t.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  signalManager.cpp  src.pro  src.qrc
src/gates/: BitmapGate.cpp  ColorGate.cpp  CompGate.cpp  ConstGate.cpp  FuncGate.cpp  Gate.cpp  IfGate.cpp  LogicGate.cpp  MathGate.cpp  PaletteGate.cpp  PixelGate.cpp  RenderGate.cpp
src/nodes/: BitmapNode.cpp  ColorNode.cpp  CompNode.cpp  ComplexNode.cpp  ConstNode.cpp  FunctionNode.cpp  IfNode.cpp  LogicNode.cpp  MathNode.cpp  Node.cpp  PaletteNode.cpp  PixelNode.cpp  RenderNode.cpp
test/: lol.emrg  sun.emrg  uk.emrg
testFiles/: lol.emrg  mandelbrot.emrg  sun.emrg  uk.emrg
